load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/harness.bzl", "java_library")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//970-api-services-beans/src/main/proto:970_api_services_beans_java_proto",
        "//970-ng-commons:module",
        "//970-rbac-core:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_amazonaws_aws_java_sdk_cloudformation",
        "@maven//:com_amazonaws_aws_java_sdk_ec2",
        "@maven//:com_azure_azure_core",
        "@maven//:com_esotericsoftware_yamlbeans_yamlbeans",
        "@maven//:com_google_apis_google_api_services_monitoring",
        "@maven//:com_sumologic_api_client_sumo_java_client",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_kubernetes_client_java",
        "@maven//:io_kubernetes_client_java_api_fluent",
        "@maven//:net_rcarz_jira_client",
        "@maven//:org_codehaus_jackson_jackson_core_asl",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_json_json",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = [
        "//970-api-services-beans/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//980-commons:module",
        "//990-commons-test:module",
        "//999-annotations:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_io_commons_io",
        "@maven//:io_kubernetes_client_java",
        "@maven//:io_kubernetes_client_java_api",
        "@maven//:io_kubernetes_client_java_api_fluent",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_yaml_snakeyaml",
    ],
)

run_tests()

run_analysis()
