load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:tools/bazel/protos/harness_grpc_library.bzl", "harness_grpc_library")

proto_library(
    name = "970_api_service_beans_proto",
    srcs = glob(["**/*.proto"]),
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

harness_grpc_library(
    name = "970_api_services_beans_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":970_api_service_beans_proto",
    ],
)
